--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ var/
 .installed.cfg
 *.egg
 .idea/
+app.db
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -88,4 +89,3 @@ ENV/
 
 # Rope project settings
 .ropeproject
-.app.db
